# moderncore

./: .clang-tidy  .clangd  .gitattributes  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  NEWS.md  README.md  meson.build  meson.options  simd.py
.gitea/workflows/: build.yaml  vv-only.yaml
cmake/: Linker.cmake  config.cmake  coverage.cmake
contrib/libbacktrace/: backtrace-supported.h  config.h  dwarf.c  elf.c  internal.h
doc/: iv.md  vv.md
doc/sample-config/: backend-wayland.ini  background.ini  mouse.ini
doc/win-cursor-template/: theme.ini
helpers/: embed.cpp
shader/: Background.vert  SoftwareCursor.frag  SoftwareCursor.vert
src/: Allocator.cpp  Allocator.hpp  Ansi.hpp  Backend.cpp  Backend.hpp  Compositor.cpp  Compositor.hpp  Cursor.cpp  Cursor.hpp  DataDeviceManager.cpp  DataDeviceManager.hpp  Display.cpp  Display.hpp  Keyboard.cpp  Keyboard.hpp  Listener.hpp  Logs.cpp  MCore.cpp  Output.cpp  Output.hpp  OutputNode.cpp  OutputNode.hpp  Pointer.cpp  Pointer.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Seat.cpp  Seat.hpp  Server.cpp  Server.hpp  Subcompositor.cpp  Subcompositor.hpp  XdgShell.cpp  XdgShell.hpp
src/afiv/: afiv.cpp
src/backend/: Backend.cpp  Backend.hpp  GpuDevice.cpp  GpuDevice.hpp
src/backend/drm/: BackendDrm.cpp  BackendDrm.hpp  DbusLoginPaths.hpp  DrmBuffer.cpp  DrmBuffer.hpp  DrmConnector.cpp  DrmConnector.hpp  DrmCrtc.cpp  DrmCrtc.hpp  DrmDevice.cpp  DrmDevice.hpp  DrmPlane.cpp  DrmPlane.hpp  DrmProperties.cpp  DrmProperties.hpp  PciBus.cpp  PciBus.hpp
src/backend/wayland/: BackendWayland.cpp  BackendWayland.hpp  WaylandBackendWindow.cpp  WaylandBackendWindow.hpp  WaylandConnector.cpp  WaylandConnector.hpp  WaylandKeyboard.cpp  WaylandKeyboard.hpp  WaylandMethod.hpp  WaylandOutput.cpp  WaylandOutput.hpp  WaylandPointer.cpp  WaylandPointer.hpp  WaylandRegistry.hpp  WaylandSeat.cpp  WaylandSeat.hpp  WaylandWindow.cpp  WaylandWindow.hpp
src/cursor/: CursorBase.cpp  CursorBase.hpp  CursorBaseMulti.cpp  CursorBaseMulti.hpp  CursorLogic.cpp  CursorLogic.hpp  CursorTheme.cpp  CursorTheme.hpp  CursorType.hpp  WinCursor.cpp  WinCursor.hpp  XCursor.cpp  XCursor.hpp
src/dbus/: DbusMessage.cpp  DbusMessage.hpp  DbusSession.cpp  DbusSession.hpp
src/image/: DdsLoader.cpp  DdsLoader.hpp  ExrLoader.cpp  ExrLoader.hpp  HeifLoader.cpp  HeifLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  JpgLoader.cpp  JpgLoader.hpp  JxlLoader.cpp  JxlLoader.hpp  PcxLoader.cpp  PcxLoader.hpp  PngLoader.cpp  PngLoader.hpp  PvrLoader.cpp  PvrLoader.hpp  RawLoader.cpp  RawLoader.hpp  StbImageLoader.cpp  StbImageLoader.hpp  TiffLoader.cpp  TiffLoader.hpp  WebpLoader.cpp  WebpLoader.hpp  XCursorLoader.cpp  XCursorLoader.hpp
src/image/vector/: PdfImage.cpp  SvgImage.cpp  SvgImage.hpp
src/plumbing/: Allocator.cpp  Allocator.hpp  Backend.cpp  Backend.hpp  Compositor.cpp  Compositor.hpp  Cursor.cpp  Cursor.hpp  DataDeviceManager.cpp  DataDeviceManager.hpp  Display.cpp  Display.hpp  Keyboard.cpp  Keyboard.hpp  Logs.cpp  Logs.hpp  Output.cpp  Output.hpp  OutputNode.cpp  OutputNode.hpp  Pointer.cpp  Pointer.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Seat.cpp  Seat.hpp  Subcompositor.cpp  Subcompositor.hpp  XdgShell.cpp  XdgShell.hpp
src/render/: Background.cpp  Background.hpp  SoftwareCursor.cpp  SoftwareCursor.hpp  Texture.cpp  Texture.hpp
src/server/: Connector.hpp  Display.cpp  GpuConnectors.cpp  GpuConnectors.hpp  GpuDevice.cpp  GpuDevice.hpp  GpuDevices.cpp  GpuDevices.hpp  GpuState.cpp  GpuState.hpp  Renderable.hpp  Server.cpp  Server.hpp
src/tools/afiv/: afiv.cpp
src/tools/exrconv/: exrconv.cpp
src/tools/iv/: Background.cpp  Background.hpp  BusyIndicator.cpp  BusyIndicator.hpp  ImageProvider.cpp  ImageProvider.hpp  ImageView.cpp  ImageView.hpp  Selection.cpp  Selection.hpp  Viewport.cpp  Viewport.hpp  iv.cpp
src/tools/vv/: Terminal.cpp  vv.cpp
src/util/: Ansi.hpp  ArgParser.cpp  ArgParser.hpp  Bitmap.cpp  Bitmap.hpp  BitmapAnim.cpp  BitmapAnim.hpp  BitmapHdr.cpp  BitmapHdr.hpp  BitmapHdrHalf.cpp  BitmapHdrHalf.hpp  Callstack.cpp  Callstack.hpp  Clock.hpp  Colorspace.hpp  Config.cpp  Config.hpp  DataContainer.hpp  EmbedData.cpp  EmbedData.hpp  FileBuffer.cpp  FileBuffer.hpp  FileWrapper.hpp  Filesystem.cpp  Filesystem.hpp  Home.cpp  Home.hpp  Invoke.hpp  Listener.hpp  Logs.cpp  Logs.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  NoCopy.hpp  Panic.hpp  PixelBytes.hpp  RobinHood.hpp  Simd.hpp  TaskDispatch.cpp  TaskDispatch.hpp  (+8 more)
src/vulkan/: PhysDevSel.cpp  PhysDevSel.hpp  VlkAllocator.cpp  VlkBase.hpp  VlkBuffer.cpp  VlkBuffer.hpp  VlkCommandBuffer.cpp  VlkCommandBuffer.hpp  VlkCommandPool.cpp  VlkCommandPool.hpp  VlkDescriptorPool.cpp  VlkDescriptorPool.hpp  VlkDescriptorSet.cpp  VlkDescriptorSet.hpp  VlkDescriptorSetLayout.cpp  VlkDescriptorSetLayout.hpp  VlkDevice.cpp  VlkDevice.hpp  VlkError.cpp  VlkError.hpp  VlkFence.cpp  VlkFence.hpp  VlkFramebuffer.cpp  VlkFramebuffer.hpp  VlkGarbage.cpp  VlkGarbage.hpp  VlkImage.cpp  VlkImage.hpp  VlkImageView.cpp  VlkImageView.hpp  VlkInfo.cpp  VlkInfo.hpp  VlkInstance.cpp  VlkInstance.hpp  VlkPhysicalDevice.cpp  VlkPhysicalDevice.hpp  VlkPipeline.cpp  VlkPipeline.hpp  VlkPipelineLayout.cpp  VlkPipelineLayout.hpp  (+20 more)
src/vulkan/ext/: DeviceInfo.cpp  DeviceInfo.hpp  GarbageChute.hpp  PciBus.cpp  PciBus.hpp  (+5 more)
src/wayland/: WaylandCursor.hpp  WaylandDataOffer.cpp  WaylandDataOffer.hpp  WaylandDisplay.cpp  WaylandDisplay.hpp  WaylandKeyboard.cpp  WaylandKeyboard.hpp  WaylandKeys.hpp  WaylandOutput.cpp  WaylandOutput.hpp  WaylandPointer.cpp  WaylandPointer.hpp  WaylandRegistry.hpp  WaylandScroll.hpp  WaylandSeat.cpp  WaylandSeat.hpp  WaylandWindow.cpp  WaylandWindow.hpp
subprojects/: tracy.wrap
tests/: BitmapTest.cpp  ConfigTest.cpp  LogsTest.cpp
tests/util/: ArgParser.cpp  BitmapTest.cpp  Callstack.cpp  Clock.cpp  Config.cpp  ConfigTest.cpp  DataBuffer.cpp  DataContainer.cpp  FileBuffer.cpp  FileBufferTest.cpp  FileWrapper.cpp  FileWrapperTest.cpp  Filesystem.cpp  Home.cpp  HomeTest.cpp  Logs.cpp  LogsTest.cpp  MemoryBuffer.cpp  PanicTest.cpp  TaskDispatch.cpp  TestUtils.hpp  Url.cpp
(+16 files in other folders)
